deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
  labels:
    app: go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
        - name: go
          image: kimhj4270/godummyweb:v4.4
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
