service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-awesome-app-preview
  namespace: my-awesome-app
spec:
  selector:
    app: my-awesome-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
