ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-awesome-app-preview
  namespace: my-awesome-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - hosts:
        - junkmm-preview.io
      secretName: letsencrypt-tls
  rules:
    - host: junkmm-preview.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-awesome-app-preview
                port:
                  number: 8080
